--- a/src/app/pages/about-me/about-me.component.html
+++ b/src/app/pages/about-me/about-me.component.html
@@ -17,7 +17,7 @@
     <div class="row no-gutters">
       <div class="col-lg-4 col-sm-6">
         <a class="portfolio-box" >
-          <img class="img-fluid" src="../../../assets/portfolio/thumbnails/1.jpg" alt="">
+          <img class="img-fluid" src="./assets/portfolio/thumbnails/1.jpg" alt="">
           <div class="portfolio-box-caption">
             <div class="project-category text-white-50">
               Category
@@ -30,7 +30,7 @@
       </div>
       <div class="col-lg-4 col-sm-6">
         <a class="portfolio-box" >
-          <img class="img-fluid" src="../../../assets/portfolio/thumbnails/2.jpg" alt="">
+          <img class="img-fluid" src="./assets/portfolio/thumbnails/2.jpg" alt="">
           <div class="portfolio-box-caption">
             <div class="project-category text-white-50">
               Category
@@ -43,7 +43,7 @@
       </div>
       <div class="col-lg-4 col-sm-6">
         <a class="portfolio-box" >
-          <img class="img-fluid" src="../../../assets/portfolio/thumbnails/3.jpg" alt="">
+          <img class="img-fluid" src="./assets/portfolio/thumbnails/3.jpg" alt="">
           <div class="portfolio-box-caption">
             <div class="project-category text-white-50">
               Category
@@ -56,7 +56,7 @@
       </div>
       <div class="col-lg-4 col-sm-6">
         <a class="portfolio-box" >
-          <img class="img-fluid" src="../../../assets/portfolio/thumbnails/4.jpg" alt="">
+          <img class="img-fluid" src="./assets/portfolio/thumbnails/4.jpg" alt="">
           <div class="portfolio-box-caption">
             <div class="project-category text-white-50">
               Category
@@ -69,7 +69,7 @@
       </div>
       <div class="col-lg-4 col-sm-6">
         <a class="portfolio-box" >
-          <img class="img-fluid" src="../../../assets/portfolio/thumbnails/5.jpg" alt="">
+          <img class="img-fluid" src="./assets/portfolio/thumbnails/5.jpg" alt="">
           <div class="portfolio-box-caption">
             <div class="project-category text-white-50">
               Category
@@ -82,7 +82,7 @@
       </div>
       <div class="col-lg-4 col-sm-6">
         <a class="portfolio-box">
-          <img class="img-fluid" src="../../../assets/portfolio/thumbnails/6.jpg" alt="">
+          <img class="img-fluid" src="./assets/portfolio/thumbnails/6.jpg" alt="">
           <div class="portfolio-box-caption p-3">
             <div class="project-category text-white-50">
               Category
